--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
       </div>
 
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+      ![a_photo_39](https://cloud.githubusercontent.com/assets/7651577/6588879/83ef1db8-c7db-11e4-885b-c97667eab9f7.jpg)
     </article>
   {% endfor %}
 </div>
